--- a/torcs-client-fuzzy-java-master/pom.xml
+++ b/torcs-client-fuzzy-java-master/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>opencsv</artifactId>
             <version>2.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/net.java.jinput/jinput -->
+        <dependency>
+            <groupId>net.java.jinput</groupId>
+            <artifactId>jinput</artifactId>
+            <version>2.0.5</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
