--- a/genetorcs/pom.xml
+++ b/genetorcs/pom.xml
@@ -70,6 +70,14 @@
             <artifactId>jgap</artifactId>
             <version>3.4.4</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
 
     </dependencies>
 </project>
